--- a/.github/workflows/ga_pipeline.yaml
+++ b/.github/workflows/ga_pipeline.yaml
@@ -8,6 +8,8 @@ on:
   # Triggers the workflow every 5 minutes
   schedule:
     - cron: "*/5 * * * *"
+  push:
+    branches: [ "main" ]
  
       # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
